# patterns

./: .gitignore  CMakeLists.txt  README.md  clean  run
datasets/: dump1.json
src/: main.cpp
src/automaton/: dfa.cpp  dfa.h
src/automaton/nfa/: nfa.cpp  nfa_transition.hpp
src/automaton/regex/: regex.cpp  regex.h
src/cli-menu/: menu.cpp  menu.h
src/dataset/: Dataset.cpp  Dataset.h
src/json/: utils.hpp
src/regex/: Frag.h  Regex.cpp  Regex.h  State.h  utils.cpp
src/tweet/: Tweet.cpp  Tweet.h
